# open-pay

./: .air.toml  .env.example  .env.prod.example  .env.staging.example  .gitignore  .gitleaks.toml  .golangci.yml  CLAUDE.md  Dockerfile.service  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  package-lock.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  release.yml  security.yml
apps/admin-dashboard/: .cta.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/merchant-portal/: .cta.json  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
cmd/openpay/: main.go
config/: prometheus.yml
config/prometheus/: alerts.yml
contracts/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/deployments/: bsc-testnet.json
contracts/script/: deploy.ts  test-bsc-testnet.ts
contracts/src/: MockPriceFeed.sol  MockUSDC.sol  MockUSDT.sol  OpenPayEscrow.sol  OpenPayPriceFeed.sol
docs/: LOCAL_DEVELOPMENT.md  SECURITY_AUDIT.md  openapi.yaml
docs-site/: architecture.mdx  authentication.mdx  introduction.mdx  mint.json  quickstart.mdx
e2e/: playwright.config.ts
scripts/: e2e-test.sh  init-multiple-dbs.sh  start-dev.sh  start-services.sh
sdks/sdk-python/: pyproject.toml
sdks/sdk-python/openpay/: __init__.py  auth.py  client.py  errors.py  types.py  webhook.py
sdks/sdk-python/tests/: test_auth.py  test_client.py
services/: Dockerfile
(+483 files in other folders)
