[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpay-sdk"
version = "0.1.0"
description = "Open Pay Python SDK — crypto-to-fiat payment processing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["openpay"]
